--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
+    implementation("app.futured.donut:donut:2.2.3")
+
+    implementation("app.futured.donut:donut-compose:2.2.3")
+
 }
 
 task wrapper(type: Wrapper){
