--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
 
     implementation("app.futured.donut:donut-compose:2.2.3")
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0' // For JSON serialization/deserialization
+
+
+
 }
 
 task wrapper(type: Wrapper){
