--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Healthmaxx"
         tools:targetApi="31">
+
+        <meta-data android:value="oKSMqkppwUZlnMss6YH4qg==DarOXC1eYhw8PjyV" android:name="api_key"/>
+
+
         <activity
             android:name=".LoginActivity"
             android:exported="true"
