--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:targetApi="31">
 
         <meta-data android:value="oKSMqkppwUZlnMss6YH4qg==DarOXC1eYhw8PjyV" android:name="api_key"/>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
 
         <activity
